Doc/force-app/main/default/objects/Product_Feature__c/fields/Initial_Man_days__c.field-meta.xml
<CustomField>
    <fullName>Initial_Man_days__c</fullName>
    <description>The initial number of man-days worth of effort estimated for the current stage. This field is most important for the development stage.</description>
    <inlineHelpText>The initial number of man-days worth of effort estimated for the current stage. This field is most important for the development stage.</inlineHelpText>
    <label>Initial Man-days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>