Doc/force-app/main/default/objects/Product_Feature__c/fields/JIRA_ID__c.field-meta.xml
<CustomField>
    <fullName>JIRA_ID__c</fullName>
    <description>The primary key (ID) of an associated JIRA entry</description>
    <externalId>true</externalId>
    <inlineHelpText>The primary key (ID) of an associated JIRA entry</inlineHelpText>
    <label>JIRA ID 1</label>
    <length>10</length>
    <type>Text</type>
</CustomField>