Doc/force-app/main/default/objects/Product_Feature__c/fields/Lead_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Lead_Engineer__c</fullName>
    <description>Primary technical person responsible for the feature&apos;s development or management of outsourced development.</description>
    <inlineHelpText>Primary technical person responsible for the feature&apos;s development or management of outsourced development.</inlineHelpText>
    <label>Lead Engineer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Andy Qian</fullName>
            </value>
            <value>
                <fullName>Austin Chambers</fullName>
            </value>
            <value>
                <fullName>Dan Harsell</fullName>
            </value>
            <value>
                <fullName>Eric Newman</fullName>
            </value>
            <value>
                <fullName>Evan Parry</fullName>
            </value>
            <value>
                <fullName>Pat Fowler</fullName>
            </value>
            <value>
                <fullName>Thomas Hadig</fullName>
            </value>
            <value>
                <fullName>Tino Wuensche</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>