Doc/force-app/main/default/objects/Product_Feature__c/fields/Remaining_Man_Days__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Man_Days__c</fullName>
    <description>Number of man-days remaining in the current stage. This is most important for the development stage which will be used to measure work backlog.</description>
    <inlineHelpText>Number of man-days remaining in the current stage. This is most important for the development stage which will be used to measure work backlog.</inlineHelpText>
    <label>Remaining Man-days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>