Doc/force-app/main/default/objects/Product_Feature__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <description>Stages of product management lifecycle.</description>
    <inlineHelpText>Stages of product management lifecycle.</inlineHelpText>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Concept</fullName>
                <color>#2F5D85</color>
                <label>Concept</label>
            </value>
            <value>
                <fullName>Requirements</fullName>
                <color>#78C953</color>
                <default>true</default>
                <label>Requirements</label>
            </value>
            <value>
                <fullName>Design</fullName>
                <color>#E27001</color>
                <label>Design</label>
            </value>
            <value>
                <fullName>Development</fullName>
                <color>#0B6FCE</color>
                <label>Development</label>
            </value>
            <value>
                <fullName>QA</fullName>
                <color>#F3D904</color>
                <label>QA</label>
            </value>
            <value>
                <fullName>Early Production</fullName>
                <color>#A53711</color>
                <label>Early Production</label>
            </value>
            <value>
                <fullName>Production</fullName>
                <color>#419249</color>
                <label>Production</label>
            </value>
            <value>
                <fullName>End-of-Life</fullName>
                <color>#0B24BE</color>
                <label>End-of-Life</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>