Doc/force-app/main/default/objects/Product_Feature__c/listViews/Integration_Builder_Features.listView-meta.xml
<ListView>
    <fullName>Integration_Builder_Features</fullName>
    <columns>NAME</columns>
    <columns>Product_Release__c</columns>
    <columns>Description__c</columns>
    <columns>Stage__c</columns>
    <columns>Feature_Owner__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Line__c</field>
        <operation>equals</operation>
        <value>Integration Builder</value>
    </filters>
    <label>Integration Builder Features</label>
</ListView>