Doc/force-app/main/default/objects/Product_Feature__c/listViews/Wall_Builder_Next_Steps.listView-meta.xml
<ListView>
    <fullName>Wall_Builder_Next_Steps</fullName>
    <columns>NAME</columns>
    <columns>Product_Release__c</columns>
    <columns>Stage__c</columns>
    <columns>Next_Steps__c</columns>
    <columns>Feature_Owner__c</columns>
    <columns>Lead_Engineer__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Line__c</field>
        <operation>equals</operation>
        <value>Wall Builder</value>
    </filters>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Requirements,Design,Development,QA,Early Production</value>
    </filters>
    <label>Wall Builder Next Steps</label>
</ListView>